# Object-Manager

./: .gitignore  CMakeLists.txt  README.md  name_sorted_objects.txt  objects.txt  program  sorted_objects.txt  time_sorted_objects.txt  type_sorted_objects.txt
include/: ICommand.h  distance_grouping.h  grouping_strategy.h  name_grouping.h  object.h  repository.h  time_grouping.h  type_grouping.h  utils.h
include/commands/: add_command.h  exit_command.h  group_command.h  list_command.h  load_command.h  save_groups_command.h
src/: distance_grouping.cpp  main.cpp  name_grouping.cpp  object.cpp  repository.cpp  time_grouping.cpp  type_grouping.cpp  utils.cpp
src/commands/: add_command.cpp  group_command.cpp  list_command.cpp  load_command.cpp  save_groups_command.cpp
tests/: CMakeLists.txt  test_distance.cpp  test_name.cpp  test_object.cpp  test_time.cpp  test_type.cpp
